--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
   "name": "react-native-wifi-reborn",
-  "version": "4.13.6",
-  "description": "A react-native implementation for viewing and connecting to Wifi networks on Android and iOS devices.",
-  "types": "lib/types/index.d.ts",
-  "main": "src/index.js",
+  "version": "5.0.0",
+  "description": "A react-native implementation for viewing and connecting to Wifi networks on Android and iOS devices. Enhanced for IoT device support.",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "source": "src/index.ts",
+  "react-native": "src/index.ts",
   "scripts": {
-    "lint": "eslint src/ lib/ plugin/ --ext .js,.jsx,.ts,.tsx",
-    "test": "echo \"No test specified\" && exit 0",
-    "build:plugin": "tsc --build plugin",
-    "checkjs": "tsc",
-    "semantic-release": "semantic-release"
+    "build": "tsc",
+    "clean": "rm -rf lib",
+    "prepare": "npm run clean && npm run build",
+    "lint": "eslint src/ --ext .ts,.tsx",
+    "typecheck": "tsc --noEmit",
+    "test": "echo \"No test specified\" && exit 0"
   },
   "files": [
+    "src",
+    "lib",
+    "android",
+    "ios",
+    "*.podspec",
     "app.plugin.js",
-    "/android/src/",
-    "/android/build.gradle",
-    "/ios",
-    "!Podfile*",
-    "/windows",
-    "/src",
-    "/lib",
-    "/plugin",
-    "/*.podspec",
-    "/jest"
+    "plugin"
   ],
   "keywords": [
     "react",
@@ -30,37 +29,36 @@
     "android",
     "ios",
     "wifi",
-    "connect"
+    "connect",
+    "iot",
+    "turbomodule"
   ],
-  "author": "",
+  "author": "unreal-work",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JuanSeBestia/react-native-wifi-reborn.git"
+    "url": "git+https://github.com/unreal-work/react-native-wifi-reborn.git"
   },
   "peerDependencies": {
-    "react-native": ">=0.13"
+    "react": ">=18.0.0",
+    "react-native": ">=0.71.0"
   },
   "dependencies": {},
-  "bugs": {
-    "url": "https://github.com/JuanSeBestia/react-native-wifi-reborn/issues"
-  },
-  "homepage": "https://github.com/JuanSeBestia/react-native-wifi-reborn#readme",
-  "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@expo/config-plugins": "^4.0.7",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@types/react-native": "^0.61.17",
-    "@typescript-eslint/eslint-plugin": "^2.21.0",
-    "@typescript-eslint/parser": "^2.21.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1",
-    "react": "^16.9.0",
-    "react-native": "^0.61.5",
-    "semantic-release": "^23.0.2",
-    "typescript": "^3.8.2"
+    "@types/react": "^18.2.0",
+    "@types/react-native": "^0.72.0",
+    "typescript": "^5.0.0"
+  },
+  "bugs": {
+    "url": "https://github.com/unreal-work/react-native-wifi-reborn/issues"
+  },
+  "homepage": "https://github.com/unreal-work/react-native-wifi-reborn#readme",
+  "license": "ISC",
+  "codegenConfig": {
+    "name": "RNWifiSpec",
+    "type": "modules",
+    "jsSrcsDir": "src",
+    "android": {
+      "javaPackageName": "com.reactlibrary.rnwifi"
+    }
   }
 }
