--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,22 @@
 {
-    "compilerOptions": {
-        "allowJs": true,
-        "checkJs": true,
-        "noEmit": true,
-        "strict": true,
-        "skipLibCheck": true,
-    },
-    "include": ["src/", "__tests__/", "__mocks__/", "lib/types/"],
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "commonjs",
+    "lib": ["ES2020"],
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "outDir": "./lib",
+    "rootDir": "./src",
+    "strict": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "jsx": "react-native",
+    "types": ["react-native"]
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "lib", "example"]
 }
