--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,48 +1,62 @@
-def safeExtGet(prop, fallback) {
-    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
-}
-
 buildscript {
+    ext.safeExtGet = {prop, fallback ->
+        rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+    }
     repositories {
         google()
         mavenCentral()
     }
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath("com.android.tools.build:gradle:8.6.1")
     }
 }
 
-apply plugin: 'com.android.library'
+def isNewArchitectureEnabled() {
+    return rootProject.hasProperty("newArchEnabled") && rootProject.getProperty("newArchEnabled") == "true"
+}
+
+apply plugin: "com.android.library"
+
+if (isNewArchitectureEnabled()) {
+    apply plugin: "com.facebook.react"
+}
 
 android {
     namespace = "com.reactlibrary.rnwifi"
-
-    compileSdkVersion safeExtGet(compileSdkVersion, 31)
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+    compileSdk safeExtGet("compileSdkVersion", 34)
 
     defaultConfig {
-        minSdkVersion safeExtGet(minSdkVersion, 21)
-        targetSdkVersion safeExtGet(targetSdkVersion, 31)
-        versionCode 1
-        versionName '1.0'
+        minSdk safeExtGet("minSdkVersion", 24)
+        targetSdk safeExtGet("targetSdkVersion", 34)
+        buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
+    }
+
+    buildFeatures {
+        buildConfig true
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    sourceSets {
+        main {
+            if (isNewArchitectureEnabled()) {
+                java.srcDirs += [
+                    "build/generated/source/codegen/java"
+                ]
+            }
+        }
     }
 }
 
 repositories {
-    maven {
-        url "$projectDir/../node_modules/react-native/android"
-    }
     google()
     mavenCentral()
 }
 
 dependencies {
-    //noinspection GradleDynamicVersion
-    implementation 'com.facebook.react:react-native:+'
-    implementation 'io.github.thanosfisherman.wifiutils:wifiutils:1.6.6'
+    implementation "com.facebook.react:react-android"
+    implementation "io.github.thanosfisherman.wifiutils:wifiutils:1.6.6"
 }
